# VIW-Fusion

./: .gitignore  README.md
camera_models/: CMakeLists.txt
camera_models/include/camodocal/camera_models/: PinholeCamera.h
camera_models/src/chessboard/: Chessboard.cc
config/: vins_rviz_config.rviz
config/OpenORIS/: realsense_stereo_imu_config.yaml
config/kaist/: left.yaml  right.yaml  urban39_config.yaml
config/my_simulation/: cam0.yaml  cam1.yaml  simulation_config.yaml
config/realsense_d435i/: infra1.yaml  infra1_gazebo.yaml  infra2.yaml  infra2_gazebo.yaml  realsense_stereo_imu_config_accio.yaml  realsense_stereo_imu_config_d435i_gazebo.yaml  realsense_stereo_imu_config_me.yaml  realsense_stereo_imu_config_ridgeback.yaml  realsense_stereo_imu_config_ridgeback_gazebo.yaml
global_fusion/: CMakeLists.txt
loop_fusion/: CMakeLists.txt
loop_fusion/src/: pose_graph.cpp
output/: extrinsic_parameter.csv  vio.csv  vio_loop.csv
script/: run_loop.sh  run_viwo.sh
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: ridgeback_viwo.launch
vins_estimator/src/: rosNodeTest.cpp  rosNodeTestWheel.cpp  rosNodeTestWheelGazebo.cpp  simulationTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  orientation_local_parameterization.cpp  orientation_local_parameterization.h  orientation_subset_parameterization.cpp  orientation_subset_parameterization.h  plane_factor.h  pose_local_parameterization.cpp  pose_subset_parameterization.cpp  pose_subset_parameterization.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  wheel_factor.h  wheel_integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp
vins_estimator/src/tool/: bagwriter.cpp
vins_estimator/src/utility/: assert.h  sophus_utils.hpp  utility.h  visualization.cpp  visualization.h
